--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       font-size: 1.5em;
       margin-bottom: 10px;
       color: #222;
+      text-align: center;
+    }
+
+    p {
+      text-align: center;
     }
 
     ul {
@@ -116,7 +121,7 @@
 <body>
 
   <div class="card" id="landingPage">
-    <h2>👋 Welcome to MV Digital Tools</h2>
+    <h2>Welcome to MV Digital Tools</h2>
     <p>Are you ready to save up to 90% on subscription services?</p>
     <button onclick="showHow()">Yes, show me how</button>
   </div>
