--- a/index.html
+++ b/index.html
@@ -1,349 +1,289 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>MV Digital Tools - Subscription Form</title>
-    <style>
-      body {
-        font-family: 'Segoe UI', sans-serif;
-        background-color: #0d1a26;
-        margin: 0;
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: start;
-        min-height: 100vh;
-      }
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #0d1a26;
+      margin: 0;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      min-height: 100vh;
+    }
 
-      .card {
-        background-color: #fff;
-        color: #333;
-        border-radius: 12px;
-        padding: 25px;
-        max-width: 420px;
-        width: 100%;
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
-        animation: fadeIn 0.5s ease;
-      }
+    .card {
+      background-color: #ffffff;
+      border-radius: 12px;
+      padding: 24px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      max-width: 420px;
+      width: 100%;
+      animation: fadeIn 0.5s ease;
+    }
 
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: translateY(10px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
-      h2 {
-        text-align: center;
-        margin-top: 0;
-        font-size: 1.4em;
-      }
+    h2 {
+      margin-top: 0;
+    }
 
-      p {
-        font-size: 0.95em;
-        text-align: center;
-        margin-bottom: 20px;
-      }
+    .hidden {
+      display: none;
+    }
 
-      label {
-        display: block;
-        font-weight: bold;
-        font-size: 0.85em;
-        margin-top: 12px;
-        margin-bottom: 5px;
-      }
+    .center {
+      text-align: center;
+    }
 
-      input,
-      select,
-      textarea {
-        width: 100%;
-        padding: 10px;
-        font-size: 14px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        margin-bottom: 10px;
-        box-sizing: border-box;
-      }
+    .btn {
+      background: #e84545;
+      color: white;
+      border: none;
+      padding: 12px;
+      width: 100%;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+    }
 
-      .price-summary {
-        background-color: #0d1a26;
-        color: white;
-        border-radius: 10px;
-        padding: 16px;
-        margin: 20px 0 10px;
-        text-align: center;
-        font-weight: bold;
-        font-size: 16px;
-      }
+    .btn:hover {
+      background: #cc3c3c;
+    }
 
-      .price-summary span {
-        display: block;
-        font-size: 20px;
-        margin-top: 4px;
-        font-weight: 700;
-      }
+    label {
+      font-weight: 600;
+      font-size: 0.85em;
+      display: block;
+      margin: 10px 0 4px;
+    }
 
-      button {
-        background-color: #e84545;
-        border: none;
-        border-radius: 8px;
-        width: 100%;
-        padding: 12px;
-        font-size: 15px;
-        font-weight: bold;
-        color: white;
-        cursor: pointer;
-      }
+    input, select, textarea {
+      width: 100%;
+      padding: 10px 12px;
+      font-size: 14px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      margin-bottom: 12px;
+      box-sizing: border-box;
+    }
 
-      button:hover {
-        background-color: #cc3c3c;
-      }
+    .price-summary {
+      background-color: #0d1a26;
+      color: white;
+      border-radius: 10px;
+      padding: 16px;
+      text-align: center;
+      font-weight: bold;
+      font-size: 18px;
+      margin: 16px 0;
+    }
 
-      #perkDisplay ul {
-        margin-top: 0;
-        margin-bottom: 15px;
-        padding-left: 20px;
-      }
+    .price-summary span {
+      display: block;
+      font-size: 24px;
+      margin-top: 5px;
+    }
 
-      #perkDisplay ul li {
-        margin-bottom: 6px;
-        font-size: 0.9em;
-      }
+    .avatar-preview {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin-bottom: 10px;
+    }
 
-      .avatar-preview {
-        text-align: center;
-        margin-bottom: 10px;
-      }
+    .avatar-preview img {
+      height: 40px;
+      width: auto;
+      border-radius: 8px;
+    }
 
-      .avatar-preview img {
-        width: 48px;
-        height: 48px;
-        border-radius: 10px;
-        object-fit: contain;
-        background: #f0f0f0;
-        padding: 4px;
-      }
+    ul {
+      padding-left: 20px;
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+  </style>
+</head>
+<body>
 
-      @media (max-width: 480px) {
-        body {
-          padding: 12px;
-        }
-        .card {
-          padding: 20px;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="card">
-      <h2>📝 Subscription Request</h2>
-      <p>Fill the form to subscribe. You'll receive payment instructions via email.</p>
+<!-- Welcome Screen -->
+<div class="card" id="welcomeCard">
+  <h2 class="center">Welcome to MV Digital Tools</h2>
+  <p class="center">Are you ready to save up to 90% on subscription services?</p>
+  <button class="btn" onclick="goToHowItWorks()">Yes, show me how</button>
+</div>
 
-      <form id="customerForm">
-        <label>👤 Full Name</label>
-        <input type="text" name="name" required />
+<!-- How it Works Screen -->
+<div class="card hidden" id="howItWorksCard">
+  <h3>📋 Here's how it works:</h3>
+  <ul>
+    <li>📝 Fill out the form — <strong>2 minutes</strong></li>
+    <li>📧 Instant payment instructions via email</li>
+    <li>✅ Activation within <strong>1–2 hours</strong> (same day)</li>
+    <li>📞 Need help? <span style="color: red;">Call 7566658</span></li>
+  </ul>
+  <button class="btn" onclick="goToForm()">Yes, show me</button>
+</div>
 
-        <label>📞 Contact Number</label>
-        <input type="tel" name="contact" required />
+<!-- Subscription Form -->
+<div class="card hidden" id="formCard">
+  <h2>📝 Subscription Request</h2>
+  <p>Fill the form to subscribe. You'll receive payment instructions via email.</p>
 
-        <label>📧 Email Address</label>
-        <input type="email" name="email" required />
+  <form id="customerForm">
+    <label>👤 Full Name</label>
+    <input type="text" name="name" required>
 
-        <label>🛠️ Request Type</label>
-        <select name="requestType" required>
-          <option value="new">New Subscription</option>
-          <option value="renew">Renew Existing</option>
-        </select>
+    <label>📞 Contact Number</label>
+    <input type="tel" name="contact" required>
 
-        <label>🧩 Service</label>
-        <div class="avatar-preview">
-          <img id="serviceAvatar" src="" alt="Service Logo" />
-        </div>
-        <select name="service" id="service" required>
-          <option value="ChatGPT">ChatGPT Pro</option>
-          <option value="Microsoft 365">Microsoft 365</option>
-          <option value="Canva Pro">Canva Pro</option>
-          <option value="Duolingo">Duolingo</option>
-          <option value="Assignment Check">Assignment Check</option>
-          <option value="Perplexity">Perplexity Pro</option>
-          <option value="Amazon Prime Video">Amazon Prime Video</option>
-          <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
-        </select>
+    <label>📧 Email Address</label>
+    <input type="email" name="email" required>
 
-        <label>⏳ Duration</label>
-        <select name="duration" id="duration" required></select>
+    <label>🛠️ Request Type</label>
+    <select name="requestType" required>
+      <option value="new">New Subscription</option>
+      <option value="renew">Renew Existing</option>
+    </select>
 
-        <div class="price-summary">
-          🛒 Total Price
-          <span id="priceDisplay">MVR 0 ($0.00)</span>
-        </div>
+    <div class="avatar-preview" id="avatarPreview"></div>
 
-        <div id="perkDisplay">
-          <strong>🔥 What do you get:</strong>
-          <ul></ul>
-        </div>
+    <label>🧩 Service</label>
+    <select name="service" id="service" required>
+      <option value="ChatGPT">ChatGPT Pro</option>
+      <option value="Microsoft 365">Microsoft 365</option>
+      <option value="Canva Pro">Canva Pro</option>
+      <option value="Duolingo">Duolingo</option>
+      <option value="Assignment Check">Assignment Check</option>
+      <option value="Perplexity">Perplexity Pro</option>
+      <option value="Amazon Prime Video">Amazon Prime Video</option>
+      <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
+    </select>
 
-        <label>🗒️ Notes / Ref</label>
-        <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
+    <label>⏳ Duration</label>
+    <select name="duration" id="duration" required>
+      <option>1 Month</option>
+      <option>6 Months</option>
+      <option>1 Year</option>
+    </select>
 
-        <input type="hidden" name="amount" id="price" />
-        <button type="submit">Submit</button>
-      </form>
+    <div class="price-summary" id="priceDisplay">
+      🛒 Total Price
+      <span>MVR 0 ($0.00)</span>
     </div>
 
-    <script>
-      const serviceEl = document.getElementById("service");
-      const durationEl = document.getElementById("duration");
-      const priceDisplay = document.getElementById("priceDisplay");
-      const priceInput = document.getElementById("price");
-      const perkDisplay = document.querySelector("#perkDisplay ul");
-      const avatar = document.getElementById("serviceAvatar");
+    <label>🔥 What do you get:</label>
+    <ul id="perkList"></ul>
 
-      const avatarMap = {
-        "ChatGPT": "https://upload.wikimedia.org/wikipedia/commons/0/04/ChatGPT_logo.svg",
-        "Microsoft 365": "https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg",
-        "Canva Pro": "https://static.canva.com/static/images/favicon.ico",
-        "Duolingo": "https://upload.wikimedia.org/wikipedia/en/thumb/c/cb/Duolingo_logo.svg/1200px-Duolingo_logo.svg.png",
-        "Assignment Check": "https://cdn-icons-png.flaticon.com/512/942/942748.png",
-        "Perplexity": "https://uploads-ssl.webflow.com/64b7f2646af4ad95ec6d9b64/64df1cbb9bfb6ecaf1b3fbd7_PerplexityAI.png",
-        "Amazon Prime Video": "https://upload.wikimedia.org/wikipedia/commons/f/f1/Prime_Video.png",
-        "Adobe Creative Cloud": "https://upload.wikimedia.org/wikipedia/commons/d/d3/Adobe_Creative_Cloud_rainbow_icon.svg"
-      };
+    <label>🗒️ Notes / Ref</label>
+    <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
 
-      const priceMap = {
-        "ChatGPT": { "1 Month": 100, "6 Months": 600, "1 Year": 1200 },
-        "Microsoft 365": { "1 Year": 500 },
-        "Canva Pro": { "1 Year": 150 },
-        "Duolingo": { "1 Year": 150 },
-        "Assignment Check": {
-          "Basic AI Detection": 50,
-          "AI Bypass": 100,
-          "AI Bypass Plus": 300
-        },
-        "Perplexity": { "1 Year": 200 },
-        "Amazon Prime Video": { "1 Year": 999 },
-        "Adobe Creative Cloud": { "1 Month": 450 }
-      };
+    <button class="btn" type="submit">Submit</button>
+  </form>
+</div>
 
-      const durationOptions = {
-        "ChatGPT": ["1 Month", "6 Months", "1 Year"],
-        "Microsoft 365": ["1 Year"],
-        "Canva Pro": ["1 Year"],
-        "Duolingo": ["1 Year"],
-        "Assignment Check": ["Basic AI Detection", "AI Bypass", "AI Bypass Plus"],
-        "Perplexity": ["1 Year"],
-        "Amazon Prime Video": ["1 Year"],
-        "Adobe Creative Cloud": ["1 Month"]
-      };
+<script>
+  const avatars = {
+    "ChatGPT": "https://upload.wikimedia.org/wikipedia/commons/0/04/ChatGPT_logo.svg",
+    "Microsoft 365": "https://cdn.iconscout.com/icon/free/png-256/microsoft-28-761688.png",
+    "Canva Pro": "https://upload.wikimedia.org/wikipedia/commons/0/0e/Canva_logo_2021.svg",
+    "Duolingo": "https://www.monotype.com/sites/default/files/2022-12/duolingo1_108.png",
+    "Assignment Check": "https://cdn-icons-png.flaticon.com/512/4213/4213415.png",
+    "Perplexity": "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Perplexity_AI_logo.svg/800px-Perplexity_AI_logo.svg.png",
+    "Amazon Prime Video": "https://upload.wikimedia.org/wikipedia/commons/f/f1/Prime_Video.png",
+    "Adobe Creative Cloud": "https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Adobe_Creative_Cloud_rainbow_icon.svg/2101px-Adobe_Creative_Cloud_rainbow_icon.svg.png"
+  };
 
-      const perksMap = {
-        "ChatGPT": [
-          "Priority access to GPT-4",
-          "Faster response times",
-          "Improved performance during peak hours"
-        ],
-        "Microsoft 365": [
-          "Full access to Word, Excel, PowerPoint",
-          "1TB OneDrive cloud storage",
-          "Outlook email & calendar",
-          "Install on up to 5 devices"
-        ],
-        "Canva Pro": [
-          "Unlimited premium templates & elements",
-          "Magic Resize and Background Remover",
-          "Brand Kit and content planner",
-          "Team collaboration features"
-        ],
-        "Duolingo": [
-          "No ads",
-          "Unlimited hearts (mistakes)",
-          "Personalized practice",
-          "Mastery quizzes and offline access"
-        ],
-        "Assignment Check": [
-          "Basic AI Detection - Basic detection on all major AI Detectors including Turnitin + MVR 15 per extra run",
-          "AI Bypass - Changes for 0% detection + MVR 25 per correction/run",
-          "AI Bypass Plus - All features + unlimited submissions"
-        ],
-        "Perplexity": [
-          "Faster and more accurate answers",
-          "Expanded formatting & citations",
-          "Sources in context",
-          "No daily usage limits"
-        ],
-        "Amazon Prime Video": [
-          "Unlimited streaming of movies and series",
-          "Exclusive Prime Originals",
-          "Watch on multiple devices",
-          "Offline downloads"
-        ],
-        "Adobe Creative Cloud": [
-          "Photoshop, Illustrator, Premiere Pro & more",
-          "100GB cloud storage",
-          "Fonts, stock assets, and portfolio tools",
-          "Cross-device sync"
-        ]
-      };
+  const priceDisplay = document.getElementById("priceDisplay").querySelector("span");
+  const perkList = document.getElementById("perkList");
+  const serviceEl = document.getElementById("service");
+  const durationEl = document.getElementById("duration");
+  const avatarPreview = document.getElementById("avatarPreview");
 
-      function updateDurationOptions() {
-        const service = serviceEl.value;
-        const options = durationOptions[service] || [];
-        durationEl.innerHTML = "";
-        options.forEach(opt => {
-          const el = document.createElement("option");
-          el.value = opt;
-          el.textContent = opt;
-          durationEl.appendChild(el);
-        });
-      }
+  const perks = {
+    "ChatGPT": ["Priority access to GPT-4", "Faster response times", "Improved performance during peak hours"],
+    "Microsoft 365": ["Full access to Word, Excel, PowerPoint", "1TB OneDrive cloud storage", "Outlook email & calendar", "Install on up to 5 devices"],
+    "Canva Pro": ["Unlimited premium templates & elements", "Magic Resize and Background Remover", "Brand Kit and content planner"],
+    "Duolingo": ["No ads", "Unlimited hearts", "Mastery quizzes", "Offline access"],
+    "Assignment Check": ["AI detection report (Turnitin, etc)", "Basic & Advanced bypass options", "Unlimited corrections with Plus plan"],
+    "Perplexity": ["Expanded answer formatting", "Citations in context", "Unlimited usage"],
+    "Amazon Prime Video": ["Prime Originals", "Movies & TV", "Multiple devices", "Offline viewing"],
+    "Adobe Creative Cloud": ["Photoshop, Illustrator, Premiere Pro", "Fonts & Stock Assets", "Cross-device sync"]
+  };
 
-      function updatePrice() {
-        const service = serviceEl.value;
-        const duration = durationEl.value;
-        let price = priceMap[service]?.[duration] || 0;
-        const usd = (price / 15.42).toFixed(2);
-        priceInput.value = `MVR ${price}`;
-        priceDisplay.textContent = `MVR ${price} ($${usd})`;
-      }
+  const prices = {
+    "ChatGPT": 100,
+    "Microsoft 365": 500,
+    "Canva Pro": 150,
+    "Duolingo": 150,
+    "Assignment Check": 150,
+    "Perplexity": 200,
+    "Amazon Prime Video": 999,
+    "Adobe Creative Cloud": 450
+  };
 
-      function updatePerks() {
-        const service = serviceEl.value;
-        const perks = perksMap[service] || [];
-        perkDisplay.innerHTML = "";
-        perks.forEach(p => {
-          const li = document.createElement("li");
-          li.textContent = p;
-          perkDisplay.appendChild(li);
-        });
-      }
+  function updatePrice() {
+    const service = serviceEl.value;
+    const price = prices[service];
+    const usd = (price / 15.42).toFixed(2);
+    priceDisplay.textContent = `MVR ${price} ($${usd})`;
+  }
 
-      function updateAvatar() {
-        const service = serviceEl.value;
-        avatar.src = avatarMap[service] || "";
-      }
+  function updatePerks() {
+    const selected = serviceEl.value;
+    perkList.innerHTML = "";
+    (perks[selected] || []).forEach(p => {
+      const li = document.createElement("li");
+      li.textContent = p;
+      perkList.appendChild(li);
+    });
+  }
 
-      function updateForm() {
-        updateDurationOptions();
-        updatePrice();
-        updatePerks();
-        updateAvatar();
-      }
+  function updateAvatar() {
+    const selected = serviceEl.value;
+    const url = avatars[selected];
+    avatarPreview.innerHTML = url ? `<img src="${url}" alt="${selected} logo">` : "";
+  }
 
-      serviceEl.addEventListener("change", updateForm);
-      durationEl.addEventListener("change", updatePrice);
-      window.onload = updateForm;
+  serviceEl.onchange = () => {
+    updatePrice();
+    updatePerks();
+    updateAvatar();
+  };
 
-      document.getElementById("customerForm").onsubmit = function (e) {
-        e.preventDefault();
-        alert("✅ Your request has been submitted.\n\n📨 Please send the payment slip to Viber 7566658.");
-        this.reset();
-        updateForm();
-      };
-    </script>
-  </body>
+  window.onload = () => {
+    updatePrice();
+    updatePerks();
+    updateAvatar();
+  };
+
+  function goToHowItWorks() {
+    document.getElementById("welcomeCard").classList.add("hidden");
+    document.getElementById("howItWorksCard").classList.remove("hidden");
+  }
+
+  function goToForm() {
+    document.getElementById("howItWorksCard").classList.add("hidden");
+    document.getElementById("formCard").classList.remove("hidden");
+  }
+
+  document.getElementById("customerForm").onsubmit = async function(e) {
+    e.preventDefault();
+    alert("✅ Your request has been submitted!\n💳 Please check your email for payment instructions.");
+    this.reset();
+    updatePrice();
+    updatePerks();
+    updateAvatar();
+  };
+</script>
+
+</body>
 </html>
